<resources>
    <string name="app_name">Log work time</string>
    <string name="title_activity_main">Log work time</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_detail_activity">Detail</string>
    <string name="network_error_anonymous_first_time">Make sure you have internet to use the application the first time</string>
    <string name="empty_work_logs_message">You haven\'t log any time yet</string>
    <string name="empty_tasks_message">You haven\'t create any taks yet</string>
    <string name="empty_worklogs_content_description">Empty work logs icon</string>
    <string name="empty_task_content_description">Empty task icon</string>
    <string name="choose_task_dialog_title">Choose Task</string>
    <string name="add_tasks">Add tasks</string>
    <string name="add_task_icon_content_description">add task icon</string>
    <string name="title_activity_add_task">Add new task</string>
    <string name="save">Save</string>
    <string name="task_name_hint">Task name</string>
    <string name="field_required">Field is required</string>
    <string name="task_created">Task created</string>
    <string name="no_task_created">No task created</string>
    <string name="action_done_icon_content_description">Action done icon</string>
    <string name="location_services_off">Remember to enable location services</string>
    <string name="permission_location_rationale">With the location permission, the app can remiend you later where you were when you were working on something ;)</string>
    <string name="button_allow">Allow</string>
    <string name="button_deny">Deny</string>
    <string name="permission_location_denied">You wont see your locations until you accept the permission</string>
    <string name="permission_location_neverask">If you wish to have the full experience, enable the permission on the app settings</string>
    <string name="date_icon_contentDescription">Date icon</string>
    <string name="task_icon_content_description">Task icon</string>
    <string name="action_icon_content_description">Action icon</string>
    <string name="sign_in_menu">Sign in</string>
    <string name="tasks_menu">Tasks</string>
    <string name="signout_menu">Sign out</string>
    <string name="sesion_menu_header">Session</string>
    <string name="title_task_list">Tasks</string>
    <string name="title_task_detail">Task Detail</string>
    <string name="download">Download</string>
    <string name="error_install_xls_viewer">Error: you need to install a Excel viewer</string>
    <string name="problem_generate_excel_report">There was a problem generating the file</string>

    <string name="report_subject">Work logs Report</string>
    <string name="report_text">Work logs email Report.</string>
    <string name="report_send_mail_action">Send email</string>
    <string name="delete">Delete</string>

    <string name="confirm_delete">Confirm delete</string>
    <string name="delete_message">Do you really want to delete the task?</string>
    <string name="cancel">Cancel</string>
    <string name="appwidget_text">Task to work on</string>
    <string name="add_widget">Add widget</string>
    <string name="start_working_cd">Start working button</string>
    <string name="pause_working_cd">Pause work button</string>
    <string name="restart_working_cd">Restart work button</string>
    <string name="stop_working_cd">Stop working button</string>
    <string name="app_icon_cd">App icon</string>

</resources>
