<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="none">
        <item
            android:id="@+id/signin"
            android:icon="@drawable/ic_person_black_24dp"
            android:title="@string/sign_in_menu"
            android:visible="false" />
        <item
            android:id="@+id/tasks"
            android:icon="@drawable/ic_format_list_numbered_black_24dp"
            android:title="@string/tasks_menu" />
    </group>

    <item android:title="@string/sesion_menu_header">
        <menu>
            <item
                android:id="@+id/signout"
                android:icon="@drawable/ic_exit_to_app_black_24dp"
                android:title="@string/signout_menu"
                android:visible="false" />
        </menu>
    </item>

</menu>
