<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/widgetBackground"
    android:orientation="horizontal"
    android:padding="@dimen/widget_margin">

    <ImageView
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_gravity="center_vertical"
        android:contentDescription="@string/app_icon_cd"
        android:src="@drawable/ic_time_white" />

    <TextView
        android:id="@+id/appwidget_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginStart="8dp"
        android:contentDescription="@string/appwidget_text"
        android:maxWidth="200dp"
        android:textColor="@color/white" />

    <ImageButton
        android:id="@+id/start_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/start_working_cd"
        android:src="@drawable/ic_play_white"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/pause_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/pause_working_cd"
        android:src="@drawable/ic_pause_white"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/restart_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/restart_working_cd"
        android:src="@drawable/ic_replay_white"
        android:visibility="gone" />

    <ImageButton
        android:id="@+id/stop_button"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stop_working_cd"
        android:src="@drawable/ic_stop_white"
        android:visibility="gone" />

</LinearLayout>