<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:map="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:context=".features.main.detail.WorkLogDetailActivity" />

    <android.support.v7.widget.CardView
        android:layout_width="280dp"
        android:layout_height="150dp"
        android:layout_marginBottom="32dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/dateIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/date_icon_contentDescription"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/taskIcon"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread"
                app:srcCompat="@drawable/ic_today_black_24dp" />

            <TextView
                android:id="@+id/date"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/dateIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/dateIcon"
                app:layout_constraintTop_toTopOf="@+id/dateIcon"
                tools:text="Moday 03 augusto" />

            <ImageView
                android:id="@+id/taskIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/task_icon_content_description"
                app:layout_constraintBottom_toTopOf="@+id/actionIcon"
                app:layout_constraintStart_toStartOf="@+id/dateIcon"
                app:layout_constraintTop_toBottomOf="@+id/dateIcon"
                app:srcCompat="@drawable/ic_format_list_numbered_black_24dp" />

            <TextView
                android:id="@+id/task"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/taskIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/taskIcon"
                app:layout_constraintTop_toTopOf="@+id/taskIcon"
                tools:text="Task 1" />

            <ImageView
                android:id="@+id/actionIcon"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_marginBottom="8dp"
                android:layout_marginTop="8dp"
                android:contentDescription="@string/action_icon_content_description"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/taskIcon"
                app:layout_constraintTop_toBottomOf="@+id/taskIcon" />

            <TextView
                android:id="@+id/action"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/actionIcon"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/actionIcon"
                app:layout_constraintTop_toTopOf="@+id/actionIcon"
                tools:text="Check In" />


        </android.support.constraint.ConstraintLayout>


    </android.support.v7.widget.CardView>

</android.support.constraint.ConstraintLayout>


